--- a/main.yml
+++ b/main.yml
@@ -11,9 +11,9 @@
         - ../config.yml
 
   roles:
-    - jhanna.homebrew
-    - jhanna.dotfiles
-    - name: jhanna.mas
+    - geerlingguy.homebrew
+    - geerlingguy.dotfiles
+    - name: geerlingguy.mas
       when: mas_installed_app_ids
 
   tasks:
