--- a/main.yml
+++ b/main.yml
@@ -17,6 +17,10 @@
   tasks:
     - include: tasks/ansible-setup.yml
 
+    - name: Install zPlug for ZSH 
+      shell: curl -sL zplug.sh/installer | zsh
+      changed_when: false
+
     # TODO: Use sudo once .osx can be run via root with no user interaction.
     - name: Run .osx dotfiles.
       shell: ~/.osx --no-restart
