--- a/main.yml
+++ b/main.yml
@@ -18,7 +18,7 @@
     - include: tasks/ansible-setup.yml
 
     - name: Install zPlug for ZSH 
-      shell: curl -sL zplug.sh/installer | zsh
+      shell: if ! type zplug; then curl -sL zplug.sh/installer | zsh; fi
       changed_when: false
 
     # TODO: Use sudo once .osx can be run via root with no user interaction.
