Add reattach-to-user-namespace for OS X tmux functionality

--- a/default.config.yml
+++ b/default.config.yml
@@ -38,6 +38,7 @@ homebrew_installed_packages:
   - pv
   - python
   - readline
+  - reattach-to-user-namespace
   - sqlite
   - ssh-copy-id
   - tmux
