--- a/main.yml
+++ b/main.yml
@@ -17,9 +17,9 @@
   tasks:
     - include: tasks/ansible-setup.yml
 
-    - name: Install zPlug for ZSH 
+    # install zplug if it is not already installed, not sure how to update it
+    - name: Install zPlug for ZSH
       shell: if ! type zplug; then curl -sL zplug.sh/installer | zsh; fi
-      changed_when: false
 
     # TODO: Use sudo once .osx can be run via root with no user interaction.
     - name: Run .osx dotfiles.
