--- a/main.yml
+++ b/main.yml
@@ -19,7 +19,7 @@
 
     # install zplug if it is not already installed, not sure how to update it
     - name: Install zPlug for ZSH
-      shell: if ! type zplug; then curl -sL zplug.sh/installer | zsh; fi
+      shell: command -v zplug || curl -sL zplug.sh/installer | zsh
 
     # TODO: Use sudo once .osx can be run via root with no user interaction.
     - name: Run .osx dotfiles.
