Add ack to brew install list

--- a/default.config.yml
+++ b/default.config.yml
@@ -17,6 +17,7 @@ dotfiles_files:
 
 homebrew_installed_packages:
   # - ansible # Installed via Pip.
+  - ack
   - autoconf
   - bash-completion
   - cowsay
