--- a/main.yml
+++ b/main.yml
@@ -18,8 +18,13 @@
     - include: tasks/ansible-setup.yml
 
     # install zplug if it is not already installed, not sure how to update it
+    - name: Check for zplug
+      shell: command -v zplug
+      register: zplug_exists
+
     - name: Install zPlug for ZSH
-      shell: command -v zplug || curl -sL zplug.sh/installer | zsh
+      shell: curl -sL zplug.sh/installer | zsh
+      when: zplug_exists != 0
 
     # TODO: Use sudo once .osx can be run via root with no user interaction.
     - name: Run .osx dotfiles.
