--- a/main.yml
+++ b/main.yml
@@ -26,6 +26,14 @@
       when: zplug_exists.stat.exists == false
       shell: curl -sL zplug.sh/installer | zsh
 
+    - name: Check for GoPath
+      stat: path=~/src/go
+      register: gopath
+
+    - name: Build GoLang dir structure
+      shell: mkdir -p ~/src/go/src/github.com/jeremy-hanna
+      when: gopath.stat.exists == false
+
     # TODO: Use sudo once .osx can be run via root with no user interaction.
     - name: Run .osx dotfiles.
       shell: ~/.osx --no-restart
