Add android-file-transfer to cask list

--- a/default.config.yml
+++ b/default.config.yml
@@ -60,6 +60,7 @@ homebrew_taps:
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
+  - android-file-transfer
   - boostnote
   - docker
   - dropbox
