add cli-improved tool brews for more information, see https://remysharp.com/2018/08/23/cli-improved

--- a/group_vars/brew_list.yml
+++ b/group_vars/brew_list.yml
@@ -4,32 +4,40 @@ homebrew_installed_packages:
   - ack
   - autoconf
   - bash-completion
-  - cowsay
+  - bat
   - chruby
+  - ctags
   - doxygen
   - drush
+  - fd
+  - fzf
   - gettext
   - git
   - gpg
   - go
   - heroku/brew/heroku
+  - htop
   - httpie
   - hub
   - iperf
+  - jq
   - libdvdcss
   - libevent
   - mcrypt
   - mysql
+  - ncdu
   - nmap
   - openssl
   - packer
   - pandoc
+  - prettyping
   - pv
   - python
   - readline
   - reattach-to-user-namespace
   - sqlite
   - ssh-copy-id
+  - tldr
   - tmux
   - tmate
   - wget
